check daemon availability
show txs immediately
only save on first sync

no store on close

Increased Version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,9 @@
     <string name="prompt_password">Password for</string>
     <string name="bad_password">Bad password!</string>
     <string name="prompt_daemon_missing">Daemon address must be set!</string>
-    <string name="prompt_wrong_net">Daemon does not fit wallet!</string>
+    <string name="prompt_wrong_net">Daemon type does not fit to wallet!</string>
+    <string name="warn_daemon_unavailable">Warning: cannot reach daemon!</string>
+    <string name="panic">Something\'s wrong!</string>
 
     <string name="title_amount">Amount</string>
     <string name="title_date">Date</string>
