--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="bad_password">Bad password!</string>
     <string name="prompt_daemon_missing">Daemon address must be set!</string>
     <string name="prompt_wrong_net">Daemon type does not fit to wallet!</string>
-    <string name="warn_daemon_unavailable">Cannot connect to daemon!</string>
+    <string name="warn_daemon_unavailable">Cannot connect to daemon! Try again.</string>
     <string name="panic">Something\'s wrong!</string>
 
     <string name="title_amount">Amount</string>
