--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,16 +46,41 @@
     <string name="message_strorage_not_permitted">We really need those External Storage permissions!</string>
 
     <string name="generate_title">Generate Wallet</string>
-    <string name="generate_name">Wallet Name</string>
-    <string name="generate_password">Wallet Password</string>
+    <string name="generate_name_hint">Wallet Name</string>
+    <string name="generate_password_hint">Wallet Password</string>
     <string name="generate_buttonGenerate">Do it already!</string>
     <string name="generate_seed">Mnemonic Seed</string>
-    <string name="generate_buttonAccept">I have noted this mnemonic seed\nNow, I want to loose all my money!</string>
+    <string name="generate_button_accept">I have noted the mnemonic seed\nNow, I want to loose all my money!</string>
+    <string name="generate_button_reset">I\'m confused - Let me start again!</string>
+
     <string name="generate_wallet_exists">Wallet exists! Choose another name</string>
     <string name="generate_wallet_created">Wallet created</string>
     <string name="generate_wallet_create_failed_1">Wallet create failed (1/2)</string>
     <string name="generate_wallet_create_failed_2">Wallet create failed (2/2)</string>
     <string name="generate_address_placeholder">9tDC52GsMjTNt4dpnRCwAF7ekVBkbkgkXGaMKTcSTpBhGpqkPX56jCNRydLq9oGjbbAQBsZhLfgmTKsntmxRd3TaJFYM2f8</string>
+    <string name="generate_viewkey_placeholder">e2b99f4cc3d644774c4b118db05f8aa9967583a01ca4d47058c3860af10bd306</string>
+    <string name="generate_spendkey_placeholder">300a54208ab0a638a8407a12e3de946da76f5a9ded303338452332ec7755210d</string>
     <string name="generate_mnemonic_placeholder">camp feline inflamed memoir afloat eight alerts females gutter cogs menu waveform gather tawny judge gusts yahoo doctor females biscuit alchemy reef agony austere camp</string>
+    <string name="generate_restoreheight_placeholder">1307882</string>
+
+    <string name="generate_address_hint">Public Address (optional)</string>
+    <string name="generate_viewkey_hint">View Key</string>
+    <string name="generate_spendkey_hint">Spend Key (optional)</string>
+    <string name="generate_mnemonic_hint">Mnemonic Seed (optional)</string>
+    <string name="generate_restoreheight_hint">Restore Height (optional)</string>
+
+    <string name="generate_wallet_label">Wallet</string>
+    <string name="generate_password_label">Password</string>
+    <string name="generate_address_label">Public Address</string>
+    <string name="generate_viewkey_label">View Key</string>
+    <string name="generate_spendkey_label">Spend Key</string>
+    <string name="generate_mnemonic_label">Mnemonic Seed</string>
+    <string name="generate_restoreheight_label">Restore Height:</string>
+
+    <string name="generate_check_keys">Check your keys!</string>
+    <string name="generate_check_key">Check your key!</string>
+    <string name="generate_check_address">Check your address!</string>
+    <string name="generate_check_mnemonic">Check your mnemonic seed!</string>
+    <string name="generate_check_something">Check your entry!</string>
 
 </resources>
