--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
 
     <string name="status_transaction_sent">Transaction sent!</string>
     <string name="status_transaction_failed">Transaction failed!</string>
+    <string name="status_transaction_prepare_failed">Could not create transaction!</string>
 
     <string name="prompt_password">Password for</string>
     <string name="bad_password">Bad password!</string>
@@ -56,8 +57,7 @@
     <string name="generate_password_hint">Wallet Password</string>
     <string name="generate_buttonGenerate">Do it already!</string>
     <string name="generate_seed">Mnemonic Seed</string>
-    <string name="generate_button_accept">I have noted the mnemonic seed\nNow, I want to loose all my money!</string>
-    <string name="generate_button_reset">I\'m confused - Let me start again!</string>
+    <string name="generate_button_accept">I have noted the above\nNow, I want to loose all my money!</string>
 
     <string name="generate_wallet_watchonly">&lt;Watch Only Wallet&gt;</string>
 
@@ -103,9 +103,12 @@
     <string name="send_prepare_hint">Prepare</string>
     <string name="send_send_hint">Get rid of my Monero!</string>
 
+    <string name="send_preparing_progress">Preparing transaction</string>
+
     <string name="send_amount_label">Amount</string>
     <string name="send_fee_label">Fee</string>
     <string name="send_dust_label">Dust</string>
+
     <string name="big_amount">999999.999999999999</string>
 
     <string-array name="mixin">
