--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,10 @@
     <string name="generate_seed">Mnemonic Seed</string>
     <string name="generate_button_accept">I have noted the above\nNow, I want to loose all my money!</string>
 
+    <string name="generate_button_backup">Backup</string>
+    <string name="generate_button_export">Export Keys</string>
+    <string name="generate_button_delete">DELETE</string>
+
     <string name="generate_wallet_watchonly">&lt;Watch Only Wallet&gt;</string>
 
     <string name="generate_wallet_exists">Wallet exists! Choose another name</string>
