--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,8 @@
     <string name="warn_daemon_unavailable">Cannot connect to daemon! Try again.</string>
     <string name="panic">Something\'s wrong!</string>
 
+    <string name="watchonly_label">(Watch Only)</string>
+
     <string name="wallet_send_hint">Send some</string>
 
     <string name="title_amount">Amount</string>
@@ -105,13 +107,33 @@
     <string name="send_sweep_hint">Sweep</string>
     <string name="send_generate_paymentid_hint">Generate</string>
     <string name="send_prepare_hint">Prepare</string>
-    <string name="send_send_hint">Get rid of my Monero!</string>
+    <string name="send_send_hint">Spend my sweet Moneroj</string>
 
     <string name="send_preparing_progress">Preparing transaction</string>
 
     <string name="send_amount_label">Amount</string>
     <string name="send_fee_label">Fee</string>
     <string name="send_dust_label">Dust</string>
+
+    <string name="send_error_title">Trasaction Error</string>
+
+    <string name="tx_address">Address</string>
+    <string name="tx_timestamp">Timestamp</string>
+    <string name="tx_id">TX ID</string>
+    <string name="tx_key">TX Key</string>
+    <string name="tx_paymentId">Payment ID</string>
+    <string name="tx_blockheight">Block</string>
+    <string name="tx_amount">Amount</string>
+    <string name="tx_fee">Fee</string>
+    <string name="tx_transfers">Transfers</string>
+    <string name="tx_notes">Notes</string>
+    <string name="tx_button_copy">Copy to Clipboard</string>
+    <string name="tx_copy_message">Copied to Clipboard</string>
+    <string name="tx_copy_label">Transaction Details</string>
+    <string name="tx_notes_hint">(optional)</string>
+    <string name="tx_button_notes">Save</string>
+    <string name="tx_notes_set">Notes saved</string>
+    <string name="tx_notes_set_failed">Notes saved failed</string>
 
     <string name="big_amount">999999.999999999999</string>
 
