--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,6 +107,7 @@
     <string name="send_sweep_hint">Sweep</string>
     <string name="send_generate_paymentid_hint">Generate</string>
     <string name="send_prepare_hint">Prepare</string>
+    <string name="send_dispose_hint">Dispose (Undo)</string>
     <string name="send_send_hint">Spend my sweet Moneroj</string>
 
     <string name="send_preparing_progress">Preparing transaction</string>
