--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="status_wallet_unloaded">Wallet saved</string>
     <string name="status_wallet_unload_failed">Wallet save failed!</string>
     <string name="status_wallet_connecting">Connecting &#8230;</string>
+    <string name="status_wallet_connect_failed">Daemon connection failed!\nCheck username/password</string>
     <string name="status_working">Working on it &#8230;</string>
 
     <string name="status_transaction_sent">Transaction sent!</string>
