--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
     <string name="generate_password_hint">Wallet Password</string>
     <string name="generate_buttonGenerate">Make me a wallet already!</string>
     <string name="generate_seed">Mnemonic Seed</string>
-    <string name="generate_button_accept">I have noted the above\nNow, I want to loose all my money!</string>
+    <string name="generate_button_accept">I have noted the above</string>
 
     <string name="generate_button_backup">Backup</string>
     <string name="generate_button_export">Export Keys</string>
