--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,6 +114,7 @@
     <string name="send_prepare_hint">Prepare</string>
     <string name="send_dispose_hint">Dispose (Undo)</string>
     <string name="send_send_hint">Spend my sweet Moneroj</string>
+    <string name="send_really_send_hint">I understand I am on mainnet\nTHis is real Monero!</string>
 
     <string name="send_preparing_progress">Preparing transaction</string>
 
