--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
 
     <string name="menu_info">Details</string>
 
-    <string name="prompt_daemon">[&lt;user&gt;:&lt;pass&gt;@]&lt;daemonhost&gt;[:&lt;port&gt;]</string>
+    <string name="prompt_daemon">[&lt;user&gt;:&lt;pass&gt;@]&lt;daemon&gt;[:&lt;port&gt;]</string>
     <string name="prompt_mainnet">Net Selection</string>
     <string name="connect_testnet">TestNet</string>
     <string name="connect_mainnet">MainNet</string>
@@ -58,6 +58,7 @@
     <string name="prompt_problems">Problems</string>
     <string name="message_strorage_not_writable">External Storage is not writable! Panic!</string>
     <string name="message_strorage_not_permitted">We really need those External Storage permissions!</string>
+    <string name="message_camera_not_permitted">No camera = No QR scanning!</string>
 
     <string name="generate_title">Create Wallet</string>
     <string name="generate_name_hint">Wallet Name</string>
@@ -111,11 +112,13 @@
     <string name="send_mixin_hint">Mixin</string>
     <string name="send_sweep_hint">Sweep</string>
     <string name="send_generate_paymentid_hint">Generate</string>
+    <string name="send_qr_hint">Scan</string>
     <string name="send_prepare_hint">Prepare</string>
     <string name="send_dispose_hint">Dispose (Undo)</string>
     <string name="send_send_hint">Spend my sweet Moneroj</string>
-    <string name="send_really_send_hint">I understand I am on mainnet\nTHis is real Monero!</string>
-
+    <string name="send_really_send_hint">I understand I am sending real Monero!</string>
+    <string name="send_qr_invalid">Not a monero QR Code</string>
+    <string name="send_qr_address_invalid">Invalid Monero address</string>
     <string name="send_preparing_progress">Preparing transaction</string>
 
     <string name="send_amount_label">Amount</string>
