make user wait for service to finish

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="status_transaction_failed">Transaction failed!</string>
     <string name="status_transaction_prepare_failed">Could not create transaction!</string>
 
+    <string name="service_busy">I am still busy with your last wallet &#8230;</string>
+
     <string name="prompt_password">Password for</string>
     <string name="bad_password">Bad password!</string>
     <string name="bad_wallet">Wallet does not exists!</string>
