--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,8 +25,8 @@
     <string name="service_busy">I am still busy with your last wallet &#8230;</string>
 
     <string name="prompt_password">Password for</string>
-    <string name="bad_password">Bad password!</string>
-    <string name="bad_wallet">Wallet does not exists!</string>
+    <string name="bad_password">Incorrect password!</string>
+    <string name="bad_wallet">Wallet does not exist!</string>
     <string name="error_not_wallet">This is not a wallet!</string>
     <string name="prompt_daemon_missing">Daemon address must be set!</string>
     <string name="prompt_wrong_net">Wallet does not match selected net</string>
@@ -108,7 +108,7 @@
 
     <string name="send_address_hint">Receiver\'s Address</string>
     <string name="send_paymentid_hint">Payment ID (optional)</string>
-    <string name="send_amount_hint">Amount</string>
+    <string name="send_amount_hint">Amount <![CDATA[(]]> XMR <![CDATA[)]]></string>
     <string name="send_notes_hint">Private Notes (optional)</string>
     <string name="send_priority_hint">Tx Priority</string>
     <string name="send_mixin_hint">Mixin</string>
