--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Monerujo</string>
-    <string name="login_activity_name">Select Wallet</string>
+    <string name="login_activity_name">Monerujo</string>
     <string name="wallet_activity_name">Wallet</string>
 
     <string name="menu_info">Details</string>
@@ -152,7 +152,7 @@
     <string name="tx_pending">PENDING</string>
     <string name="tx_failed">FAILED</string>
 
-    <string name="receive_generate_hint">Generate QR Code</string>
+    <string name="receive_generate_hint">Show me the QR Code</string>
     <string name="receive_paymentid_button">Generate</string>
     <string name="receive_paymentid_label">PaymentID</string>
     <string name="receive_paymentid_hint">(optional)</string>
