Show Licenses and upgrade to support library 25.4.0

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="login_activity_name">Monerujo</string>
     <string name="wallet_activity_name">Wallet</string>
 
+    <string name="menu_about">About &#8230;</string>
+
     <string name="menu_info">Details</string>
     <string name="menu_receive">QR Receive</string>
     <string name="menu_rename">Rename</string>
