--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="menu_testnet">Testnet</string>
     <string name="menu_about">About &#8230;</string>
 
+    <string name="menu_help">Help</string>
     <string name="menu_info">Details</string>
     <string name="menu_receive">QR Receive</string>
     <string name="menu_rename">Rename</string>
