help & new exchange icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -216,7 +216,7 @@
 
     <string name="receive_generate_hint">Show me the QR Code</string>
     <string name="receive_paymentid_button">Generate</string>
-    <string name="receive_paymentid_hint">Payment ID</string>
+    <string name="receive_paymentid_hint">Payment ID (optional)</string>
     <string name="receive_amount_hint">Amount</string>
     <string name="receive_amount_xmr_hint">XMR</string>
     <string name="receive_cannot_open">Could not open wallet!</string>
