--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="menu_share">Share</string>
     <string name="menu_help">Help</string>
     <string name="menu_info">Details</string>
-    <string name="menu_receive">QR Receive</string>
+    <string name="menu_receive">Receive</string>
     <string name="menu_rename">Rename</string>
     <string name="menu_archive">Archive</string>
     <string name="menu_backup">Backup</string>
