--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,7 +168,7 @@
     <string name="send_prepare_hint">Prepare</string>
     <string name="send_dispose_hint">Dispose (Undo)</string>
     <string name="send_send_hint">Spend my sweet Moneroj</string>
-    <string name="send_really_send_hint">I understand I am sending real Monero!</string>
+    <string name="send_really_send_hint">Last Step - Confirm!</string>
     <string name="send_qr_invalid">Not a monero QR Code</string>
     <string name="send_qr_address_invalid">Invalid Monero address</string>
     <string name="send_preparing_progress">Preparing transaction</string>
