--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,8 +45,11 @@
     <string name="status_wallet_unloaded">Wallet saved</string>
     <string name="status_wallet_unload_failed">Wallet save failed!</string>
     <string name="status_wallet_connecting">Connecting &#8230;</string>
-    <string name="status_wallet_connect_failed">Daemon connection failed!\nCheck username/password</string>
-    <string name="status_wallet_connect_timeout">Daemon connection timed out!\nTry again or another!</string>
+    <string name="status_wallet_connect_failed">Node connection failed!\nCheck username/password</string>
+    <string name="status_wallet_connect_timeout">Node connection timed out!\nTry again or another.</string>
+    <string name="status_wallet_node_invalid">Node invalid!\nTry another.</string>
+    <string name="status_wallet_connect_ioex">Cannot reach node!\nTry again or another.</string>
+
     <string name="status_working">Working on it &#8230;</string>
     <string name="status_wallet_disconnected">Disconnected</string>
 
