--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,18 @@
     <string name="label_close">Close</string>
     <string name="label_wallet_advanced_details">Touch for detailed information</string>
 
-    <string name="label_receive_gen_qr_code">Touch for QR Code</string>
+    <string name="label_send_success">Success!</string>
+    <string name="label_send_done">Done</string>
+
+    <string name="label_receive_info_gen_qr_code">Touch for QR Code</string>
+    <string name="label_send_info_fees">Higher Priority = Higher Fees</string>
+
+    <string name="message_copy_txid">Transaction ID copied to clipboard!</string>
+
+    <string name="label_send_txid">Transaction ID</string>
+    <string name="label_send_address">Destination Address</string>
+    <string name="label_send_payment_id">Payment ID</string>
+    <string name="label_send_notes">Notes</string>
 
     <string name="backup_progress">Backup in progress</string>
     <string name="archive_progress">Archive in progress</string>
@@ -56,7 +67,7 @@
     <string name="status_wallet_disconnected">Disconnected</string>
 
     <string name="status_transaction_sent">Transaction sent!</string>
-    <string name="status_transaction_failed">Transaction failed!</string>
+    <string name="status_transaction_failed">Transaction failed: %1$s</string>
     <string name="status_transaction_prepare_failed">Could not create transaction!</string>
 
     <string name="service_busy">I am still busy with your last wallet &#8230;</string>
@@ -64,6 +75,7 @@
     <string name="prompt_rename">Rename %1$s</string>
 
     <string name="prompt_password">Password for %1$s</string>
+    <string name="prompt_send_password">Confirm Password</string>
     <string name="bad_password">Incorrect password!</string>
     <string name="bad_wallet">Wallet does not exist!</string>
     <string name="error_not_wallet">This is not a wallet!</string>
@@ -163,7 +175,7 @@
 
     <string name="send_address_hint">Receiver\'s Address</string>
     <string name="send_paymentid_hint">Payment ID (optional)</string>
-    <string name="send_amount_hint">Amount <![CDATA[(]]> XMR <![CDATA[)]]></string>
+    <string name="send_amount_hint">0.00</string>
     <string name="send_notes_hint">Private Notes (optional)</string>
     <string name="send_priority_hint">Tx Priority</string>
     <string name="send_mixin_hint">Mixin</string>
@@ -178,6 +190,14 @@
     <string name="send_qr_address_invalid">Invalid Monero address</string>
     <string name="send_preparing_progress">Preparing transaction</string>
     <string name="send_title">Send</string>
+    <string name="send_available">Available funds: %1$s XMR</string>
+    <string name="send_address_title">Address</string>
+    <string name="send_amount_title">Amount</string>
+    <string name="send_settings_title">Settings</string>
+    <string name="send_confirm_title">Confirm</string>
+    <string name="send_success_title">Done</string>
+    <string name="send_summary_heading">Summary</string>
+    <string name="send_amount_too_large">Amount > Funds</string>
 
     <string name="send_amount_label">Amount</string>
     <string name="send_fee_label">Fee</string>
